--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,31 @@
     box-sizing: border-box;
 }
 
+/* hide on mobile devices or devices with a small screen. */
+@media (max-width: 1200px) {
+    .connection-icon2 {
+        display: none; 
+    }
+}
+@media (max-width: 1100px) {
+    #normalmode {
+        background-image: none;
+    }
+}
+    
+@media (max-height: 665px) {
+    #normalmode2 {
+        display: none;
+    }
+}
+    
+@media (max-height: 450px) {
+    #normalmode1 {
+        display: none;
+    }
+}
+    
+
 /* Make theme turn white when user is using light mode on their OS */
 @media (prefers-color-scheme: light) {
     .loadingcontainer {
@@ -14,6 +39,7 @@
 
     body {
         background-color: white;
+        color: black;
     }
 
     .card {
@@ -49,6 +75,7 @@
 
     body {
         background-color: black;
+        color: white;
     }
 
     .card {
@@ -93,6 +120,7 @@
 .button {
     background-color: transparent;
     backdrop-filter: blur(1000px);
+    -webkit-backdrop-filter: blur(1000px);
     border: none;
     padding: 12px 20px;
     text-align: center;
@@ -230,8 +258,24 @@ body {
     border-radius: 10%;
 }
 
+.loadingtextzh {
+    animation: 1s ease-out 0s 1 fadeIn;
+}
+
+.loadingtextzhhid {
+    animation: 1s ease-out 0s 1 fadeIn;
+}
+
+.loadingtext {
+    animation: 1s ease-out 0s 1 fadeIn;
+}
+
+
 #loading {
+    text-align: center;
     width: 128px;
+    display: block;
+    margin: 0 auto;
     height: 128px;
     border-radius: 10%;
     transition: opacity 0.5s;
